# Connect_4_Rust

backend/: Cargo.toml  Rocket.toml
backend/src/: main.rs
backend/src/model/: mod.rs
backend/src/utils/: mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/pages/: c4Computer.rs  homePage.rs  howC4.rs  howToot.rs  mod.rs  tootComputer.rs
