[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "DomRect",
    "HtmlSelectElement",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "console",
]
